initial commit after gatsby new; converted old posts to mdx from old site

--- a/content/posts/hello-world.mdx
+++ b/content/posts/hello-world.mdx
@@ -1,31 +1,12 @@
 ---
-title: Hello World (example)
-date: 2019-04-15
+title: Hello, world!
+date: 2017-12-07
+published: true
+keywords: [hello, world, post, newborn, son, journey]
 ---
 
-Hello, world! This is a demo post for `gatsby-theme-blog`.
+It seems appropriate to not only start this today, but to use this title. Since my son Mason has said his own “Hello, world!” today. Being a newborn, he can’t speak yet but he’s at the beginning of his journey. Much like we all were at one point or another, and with each new thing we learn, continue that journey into a new realm.
 
-Delete me, and get writing!
+I remember writing my first program as a kid, and by program it was “Hello, world!” printed to the screen. (Likely followed shortly after by something crude). It was gratifying to make that happen, even though looking back it was trivial compared to what I’ve done since. My original goal was to create games, and I did for a bit. I’m still upset with myself that I didn’t keep copies of those text adventure games. As terrible as they were it would have been great to go back and look them over now. A benchmark of a much younger me, a stranger at this point.
 
-```js:title=gatsby-config.js
-module.exports = {
-  plugins: [
-    "gatsby-theme-blog", // highlight-line
-    "gatsby-theme-notes"
-  ]
-};
-```
-
-This is another paragraph after the code block.
-
-## This is a secondary heading
-
-```jsx
-import React from "react";
-import { ThemeProvider } from "theme-ui";
-import theme from "./theme";
-
-export default props => (
-  <ThemeProvider theme={theme}>{props.children}</ThemeProvider>
-);
-```
+My plan for this site is to write about what I’m building, what and how I’m learning as I go. A reflective look at things, and a way to help others if they stumble upon a post.
