updated: removed light/dark switch in blog; added: a little css grid to help with responsiveness; fixed: the inability to have images due to both blurred and original image in a post

--- a/content/posts/let-people-have-their-thing/index.mdx
+++ b/content/posts/let-people-have-their-thing/index.mdx
@@ -1,14 +1,15 @@
 ---
+slug: let-people-have-their-thing
 title: Let People Have Their Thing
 date: 2019-12-19
 published: true
 keywords: [jackass, ewok, porg, javascript]
 ---
 
-<!-- !['Picture of a jackass'](./jackass.jpg) Photo by
+![Picture of a jackass](./images/jackass.jpg) Photo by
 [Jordan Butler](https://unsplash.com/@jortaybut?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText)
 on
-[Unsplash](https://unsplash.com/s/photos/jackass?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText) -->
+[Unsplash](https://unsplash.com/s/photos/jackass?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText)
 
 ## TLDR: Don’t be a jackass
 
@@ -28,8 +29,8 @@ generation, at least from Empire on. Ewoks anyone? They were totally added as a
 marketing angle towards kids. Merchandise is what sells, and the new movies are
 no exception to that.
 
-<!-- I mean seriously, look at these adorable fuckers.
-!['Picture of a porg, and ewok, from Star Wars'](./ewok-and-porg.jpeg) -->
+I mean seriously, look at these adorable fuckers.
+![Picture of a porg, and ewok, from Star Wars](./images/ewok-and-porg.jpeg)
 
 ### Really? You’re going to use that…?
 
