added: excerpt field in all articles so the social cards will work correctly

--- a/content/posts/annual-review-2019/index.mdx
+++ b/content/posts/annual-review-2019/index.mdx
@@ -1,6 +1,7 @@
 ---
 slug: annual-review-2019
 title: "Annual Review: 2019"
+excerpt: A year in review
 date: 2019-12-31
 published: true
 keywords: [javascript, review]
