--- a/content/posts/gatsby-double-images/index.mdx
+++ b/content/posts/gatsby-double-images/index.mdx
@@ -1,6 +1,7 @@
 ---
 slug: double-image-gatsby-mdx
 title: Double Image While Using gatsby-image and MDX
+excerpt: Having problems with duplicate images in Gatsby?
 date: 2020-01-10
 published: true
 keywords: [javascript, gatsby, mdx, troubleshooting]
