--- a/content/posts/let-people-have-their-thing/index.mdx
+++ b/content/posts/let-people-have-their-thing/index.mdx
@@ -1,6 +1,7 @@
 ---
 slug: let-people-have-their-thing
 title: Let People Have Their Thing
+excerpt: Seriously, why do we still have to have this discussion?
 date: 2019-12-19
 published: true
 keywords: [jackass, ewok, porg, javascript]
