--- a/content/posts/multiple-spaces-macos/index.mdx
+++ b/content/posts/multiple-spaces-macos/index.mdx
@@ -1,16 +1,25 @@
 ---
 title: How to turn on multiple docks/menu-bars in MacOS
+excerpt: They could have made this more intuitive
 date: 2019-10-28
 published: true
 keywords: [MacOs, dock, menu-bar, displays]
 ---
 
-> **TLDR:** > _System Preferences_ > _Mission Control_ > _Displays have separate Spaces_ must be checked
+> **TLDR:** > _System Preferences_ > _Mission Control_ > _Displays have separate
+> Spaces_ must be checked
 
-Recently I found myself trying to keep my resource usage down on an old Mac Mini and MacBook Pro. Trying to run all the things I’m used to on a more performant machine limited me in what I was doing. Fun fact, on this machine, running Outlook and Skype at the same time causes it to completely freeze and be unresponsive during a video call.
+Recently I found myself trying to keep my resource usage down on an old Mac Mini
+and MacBook Pro. Trying to run all the things I’m used to on a more performant
+machine limited me in what I was doing. Fun fact, on this machine, running
+Outlook and Skype at the same time causes it to completely freeze and be
+unresponsive during a video call.
 
-In order to set things up for multiple displays and workspaces you need to go into _System Preferences_ and select _Mission Control_.
+In order to set things up for multiple displays and workspaces you need to go
+into _System Preferences_ and select _Mission Control_.
 
-Make sure that _Displays have separate Spaces_ is selected. If not, select it after which you’ll need to Log Out in order for this setting to take effect.
+Make sure that _Displays have separate Spaces_ is selected. If not, select it
+after which you’ll need to Log Out in order for this setting to take effect.
 
-Now you’ll be able to have more than one _Main Space_ across displays. No longer will your extra desktops be across all displays either.
+Now you’ll be able to have more than one _Main Space_ across displays. No longer
+will your extra desktops be across all displays either.
