--- a/content/posts/react-router-link-and-storybook/index.mdx
+++ b/content/posts/react-router-link-and-storybook/index.mdx
@@ -1,6 +1,7 @@
 ---
 slug: react-router-link-and-storybook
 title: React-router, <Link>, and Storybook
+excerpt: "Invariant failed: You should not use `<Link>` outside a `<Router>`"
 date: 2020-02-05
 published: true
 keywords: [react-router, react, storybook]
