--- a/content/posts/useful-docker-commands/index.mdx
+++ b/content/posts/useful-docker-commands/index.mdx
@@ -1,5 +1,6 @@
 ---
 title: Useful Docker Commands
+excerpt: Every now and then you just need a good reference
 date: 2018-03-21
 keywords:
   [
@@ -26,7 +27,8 @@ Every now and then you just need a good reference
 
 ## Docker Machine
 
-docker-machine commands aren't needed if using the GUI toolkit, but where's the fun in that?
+docker-machine commands aren't needed if using the GUI toolkit, but where's the
+fun in that?
 
 ```shell
   # Start VM
