--- a/content/posts/hello-world/index.mdx
+++ b/content/posts/hello-world/index.mdx
@@ -1,12 +1,26 @@
 ---
 title: Hello, world!
+excerpt: First!
 date: 2017-12-07
 published: true
 keywords: [hello, world, post, newborn, son, journey]
 ---
 
-It seems appropriate to not only start this today, but to use this title. Since my son Mason has said his own “Hello, world!” today. Being a newborn, he can’t speak yet but he’s at the beginning of his journey. Much like we all were at one point or another, and with each new thing we learn, continue that journey into a new realm.
+It seems appropriate to not only start this today, but to use this title. Since
+my son Mason has said his own “Hello, world!” today. Being a newborn, he can’t
+speak yet but he’s at the beginning of his journey. Much like we all were at one
+point or another, and with each new thing we learn, continue that journey into a
+new realm.
 
-I remember writing my first program as a kid, and by program it was “Hello, world!” printed to the screen. (Likely followed shortly after by something crude). It was gratifying to make that happen, even though looking back it was trivial compared to what I’ve done since. My original goal was to create games, and I did for a bit. I’m still upset with myself that I didn’t keep copies of those text adventure games. As terrible as they were it would have been great to go back and look them over now. A benchmark of a much younger me, a stranger at this point.
+I remember writing my first program as a kid, and by program it was “Hello,
+world!” printed to the screen. (Likely followed shortly after by something
+crude). It was gratifying to make that happen, even though looking back it was
+trivial compared to what I’ve done since. My original goal was to create games,
+and I did for a bit. I’m still upset with myself that I didn’t keep copies of
+those text adventure games. As terrible as they were it would have been great to
+go back and look them over now. A benchmark of a much younger me, a stranger at
+this point.
 
-My plan for this site is to write about what I’m building, what and how I’m learning as I go. A reflective look at things, and a way to help others if they stumble upon a post.
+My plan for this site is to write about what I’m building, what and how I’m
+learning as I go. A reflective look at things, and a way to help others if they
+stumble upon a post.
