fix: removed backticks from title

--- a/content/posts/git-master-to-main/index.mdx
+++ b/content/posts/git-master-to-main/index.mdx
@@ -1,6 +1,6 @@
 ---
 slug: git-master-to-main
-title: How to Rename a Git branch From `master` to `main`
+title: How to Rename a Git branch From master to main
 excerpt: A quick guide on how to migrate a repository.
 date: 2021-05-01
 published: true
