--- a/content/posts/alacritty-workaround/index.mdx
+++ b/content/posts/alacritty-workaround/index.mdx
@@ -7,6 +7,7 @@ published: true
 keywords: [terminal, macos, alacritty, catalina]
 ---
 
-> 📝 Note: this has only been tested in Catalina and not Big Sur
-In order to get Alacritty running on macOS without invoking Gatekeeper you need to install it with Brew via the following command:
-`brew install --cask alacritty --no-quarantine`
+> 📝 Note: this has only been tested in Catalina and not Big Sur In order to get
+> Alacritty running on macOS without invoking Gatekeeper you need to install it
+> with Brew via the following command:
+> `brew install --cask alacritty --no-quarantine`
