fix: links cant be in heading elements apparently

--- a/content/posts/3-helpful-websites-for-learning-modern-css/index.mdx
+++ b/content/posts/3-helpful-websites-for-learning-modern-css/index.mdx
@@ -13,10 +13,10 @@ Variables, Flexbox, and Grid.
 Here are a few websites that can help you level up your understanding of CSS, no
 frameworks required.
 
-## [Flexbox Froggy](https://flexboxfroggy.com/)
+## Flexbox
 
-This is a fun game where you help a frog and its friends navigate a pond with
-the help of flexbox.
+[Flexbox Froggy](https://flexboxfroggy.com/) This is a fun game where you help a
+frog and its friends navigate a pond with the help of flexbox.
 
 It introduces the properties and directions of flexbox: `justify-content`,
 `align-items`, `flex-direction`.
@@ -24,11 +24,9 @@ It introduces the properties and directions of flexbox: `justify-content`,
 The difficulty quickly ramps up by introducing more frogs to position and
 colored lily pads to match frogs.
 
-## [Flexbox Zombies](https://mastery.games/flexboxzombies/)
-
-Dave Geddes has created multiple games, but the first I played of his was
-Flexbox Zombies. A free\* game that teaches both basic and advanced concepts of
-flexbox.
+[Flexbox Zombies](https://mastery.games/flexboxzombies/) Dave Geddes has created
+multiple games, but the first I played of his was Flexbox Zombies. A free\* game
+that teaches both basic and advanced concepts of flexbox.
 
 While some of the lessons are similar to Flexbox Froggy in that you're
 positioning characters, Flexbox Zombies is a more advanced lesson with 12 levels
@@ -39,10 +37,11 @@ Dave also has some great articles and other games on his site,
 
 \*as of the time of writing
 
-## [Grid Garden](https://cssgridgarden.com/)
+## Grid
 
-By the same maker as Flexbox Froggy comes Grid Garden, where the goal is to take
-care of your garden of vegetables by using the powers of CSS Grid.
+[Grid Garden](https://cssgridgarden.com/) By the same maker as Flexbox Froggy
+comes Grid Garden, where the goal is to take care of your garden of vegetables
+by using the powers of CSS Grid.
 
 This game is _very_ similar in play style and structure to Flexbox Froggy.
 
@@ -50,11 +49,12 @@ Alternatively, one could play Grid Critters to have a more interactive and deep
 dive into Grid, but the garden is free. (I believe Grid Garden to be worth the
 price, but I wanted to share a list of primarily free games)
 
-## Bonus: [CSS Diner](https://flukeout.github.io/)
+## Bonus
 
-This is a good refresher on the basics of selectors and positioning in CSS. This
-was the first game I played when learning HTML and CSS. I found it online one
-day and spent a fair amount of time trying to beat it.
+[CSS Diner](https://flukeout.github.io/) This is **a good refresher** on the
+basics of selectors and positioning in CSS. This was the first game I played
+when learning HTML and CSS. I found it online one day and spent a fair amount of
+time trying to beat it.
 
 I hope you give some of these games a shot and see how fun they are and how
 powerful modern CSS can be.
