fix: forgot excerpt in ship 19 post

--- a/content/posts/3-skills-i-learned-working-on-helicopters-that-i-use-as-a-software-developer/index.mdx
+++ b/content/posts/3-skills-i-learned-working-on-helicopters-that-i-use-as-a-software-developer/index.mdx
@@ -2,7 +2,7 @@
 slug: 3-skills-i-learned-working-on-helicopters-that-i-use-as-a-software-developer
 title:
   3 Skills I Learned Working on Helicopters That I Use as a Software Developer
-excerpt:
+excerpt: I'm still surprised at the overlap in roles
 date: 2022-03-30
 published: true
 keywords: [military, helicopters, troubleshooting, development]
