fix: subtitle for day 30

--- a/content/posts/what-writing-daily-for-the-past-30-days-has-taught-me/index.mdx
+++ b/content/posts/what-writing-daily-for-the-past-30-days-has-taught-me/index.mdx
@@ -1,7 +1,7 @@
 ---
 slug: what-writing-daily-for-the-past-30-days-has-taught-me
 title: What Writing Daily for the Past 30 Days Has Taught Me
-excerpt: Make it fun, make it your own.
+excerpt: Definitely not done
 date: 2022-04-10
 published: true
 keywords: [writing, habit]
